plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.kts'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}
// Cloud
dependencyManagement {
    imports {
        mavenBom('com.google.cloud:libraries-bom:26.60.0')
        mavenBom('com.google.cloud:spring-cloud-gcp-dependencies:7.2.0')
    }
}
dependencies {
    // CORE
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // OBSERVABILITY METRICS
//    implementation 'io.micrometer:micrometer-registry-prometheus'
//    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
//    implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
    // DATA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // Substituímos o conector MySQL pelo PostgreSQL
    runtimeOnly 'org.postgresql:postgresql'

    // DOC
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    implementation 'com.itextpdf:kernel:7.2.5'
    implementation 'com.itextpdf:layout:7.2.5'


    // DEV UTILS
    implementation "org.springframework.boot:spring-boot-starter-webflux"
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    compileOnly 'org.projectlombok:lombok'

    //SECURITY
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // para converter claims em JSON
    implementation 'org.springframework.security:spring-security-crypto'

    implementation 'org.springframework.boot:spring-boot-starter-integration'
    testImplementation 'org.mockito:mockito-inline:5.2.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.springframework.security:spring-security-test'

}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('bootBuildImage') {
    builder = "paketobuildpacks/builder-jammy-base"
    imageName = "489540979930.dkr.ecr.sa-east-1.amazonaws.com/kronos:latest"
}